Data/ebnf.ebnf
#---------------------------------------------------------------------------------------------------------------------------------------------------
# Ebnf Grammer in EBNF
# 28.04.2020 Andreas Foellmer
#---------------------------------------------------------------------------------------------------------------------------------------------------
w1              = a , b , c .
w2              = a | b | c .
w3              = a  b  c .
w4              = (a) b .
w5              = [a] b .
w6              = [a b c] d .
w7              = {a} b .
w8              = {a b c} d .

ebnf            = {rule} .
expression      = term {"|" term}.
term            = empty | (factor {["," "x"] factor}).
factor          = ident | block | repetition | option | literal.
blok            = "(" expression ")".
repetition      = "{" expression "}".
option          = "[" expression "]".
literal         = "\042" {character} "\042".
empty           = .
#ident           = (upper|lower|identspecial){upper|lower|identspecial|digit}.
#character       = lower | upper | digit | special | escape.
#lower           = "a"~"z".
#upper           = "A"~"Z".
#digit           = "0"~"9".
#hexdigit        = digit|"A"~"F".
#identspecial    = "$"|"_".
#special         = "$"|"_"|"-"|"\042"|"#"|"&"|"'"|"|"|"*"|"+"|","|"."|"/"|":"|";"|"<"|"="|">".
#escape          = "\0"|"\a"|"\b"|"\e"|"\E"|"\f"|"\n"|"\r"|"\t"|"\v"|"\'"|"\\"|"\?".

