Q9-PARSEC/Source/parsec.cpp
//═════════════════════════════════════════════════════════════════════════════════════════════════
// File:   parsec.cpp                                                                      Ver. 2.30
// Owner:  AF
// Desc.:  EBNF-Uebersetzer (Wirth-Dialekt): parst eine .ebnf-Grammatik, erzeugt daraus eine
//         Sprungtabelle mit Call/Return-Semantik (Stack-Maschine), fuehrt sie gegen Testeingaben
//         aus und verwaltet eine strukturierte Arbeitsdatei (<basis>.lextab) mit den Bloecken
//         EBNF-QUELLTEXT, TS-/NTS-SYMBOLTABELLE, PARSER-TABELLE sowie den nutzer-editierbaren
//         Bloecken TESTS und NUTZER-CODE.
//         Endziel des Projekts: Codegenerierung (rekursiver Abstieg) fuer die Grammatik,
//         zuerst als 68k-Assembler.
//
// Call:   parsec <basis> [<teststring>]
//         Fall A: <basis>.ebnf vorhanden -> Grammatik neu uebersetzen (die .ebnf ist die
//                 Wahrheit), Arbeitsdatei <basis>.lextab neu schreiben (TESTS bleiben erhalten),
//                 Listing nach <basis>.lexlst.
//         Fall B: keine .ebnf -> Grammatik direkt aus der Arbeitsdatei <basis>.lextab laden.
//         Danach: TESTS-Block ausfuehren; optional <teststring> gegen die Startregel testen.
//
// Edition History
//─────────┬──────┬─────────────────────────────────────────────────────────────────────────┬──────
// Date    │ Ver. │ Description                                                             │ By
//─────────┼──────┼─────────────────────────────────────────────────────────────────────────┼──────
// 20-04-28│ 1.00 │ Urspruengliche Version (Visual Studio, Windows): EBNF-Parser +          │ AF
//         │      │ Tabellen-Erzeugung als CSV (.lextab) und Listing (.lexlst)              │
// 26-07-19│ 1.10 │ Adressaufloesung fuer NTS-Referenzen (resolveCallAddresses) +           │ CF
//         │      │ Linksrekursions-Erkennung ueber firstPos-Graph (checkLeftRecursion)     │
// 26-07-19│ 1.20 │ Bereichsoperator "~" ("a"~"z", mode RNG) + optionale <name>-NTS-Syntax; │ CF
//         │      │ ISO-14977-Abweichungen dokumentiert (Dialekt-Kommentar unten)           │
// 26-07-19│ 1.30 │ Stack-Maschine execFrom(): Tabelle laeuft wirklich gegen Eingabetext;   │ CF
//         │      │ dabei 4 alte Tabellen-Bugs behoben (Sequenz-Kurzschluss, mittlere       │
//         │      │ Alternativen, {}/[]/() -Nachbearbeitung, komplexer erster Faktor)       │
// 26-07-19│ 2.00 │ Arbeitsdatei-Format: .lextab ist jetzt strukturiert (EBNF-QUELLTEXT,    │ CF
//         │      │ TS-/NTS-SYMBOLTABELLE, PARSER-TABELLE, TESTS, NUTZER-CODE). Die          │
//         │      │ editierbaren Bloecke bleiben beim Neu-Erzeugen erhalten.                 │
//         │      │ Neu-Erzeugen erhalten und laufen automatisch (runTests); ohne .ebnf     │
//         │      │ laedt loadWorkfileAsGrammar() die Tabelle direkt (Fall B). Portierung   │
//         │      │ auf macOS/clang (msvc_compat.h), OS-Kennung erweitert                   │
// 26-07-19│ 2.10 │ Tabellen-Bugs 5+6 behoben: expression() patcht Alternativen jetzt ueber │ CF
//         │      │ den ganzen Zeilenbereich (mehrfaktorige Alternativen "a" "b" | "c" und  │
//         │      │ komplexe erste Faktoren [x] y | z waren falsch verdrahtet); term()      │
//         │      │ unterscheidet Fehlschlag-ohne-Konsum (F) von committed (E) nach         │
//         │      │ ueberspringbaren Gruppen; runtime-mehrdeutige Stellen -> WARNUNG        │
// 26-07-19│ 2.20 │ [LEXER]-Block in der Arbeitsdatei (roh erhalten wie NUTZER-CODE, an     │ CF
//         │      │ lexParseConfig() der Codegenerierung uebergeben); Kommentarfilter-Fix:  │
//         │      │ '#' zaehlt nur noch am ZEILENANFANG als Kommentar (vorher verschwand    │
//         │      │ z.B. die ganze Regelzeile expression = ... ("#") ... mitsamt Regel)     │
// 26-07-19│ 2.30 │ [CODEGEN]-Block (roh erhalten): M68K OS9 erzeugt zusaetzlich            │ CF
//         │      │ <basis>_os9.a im Microware-r68-Format (nam/psect/ends) -- mit echtem    │
//         │      │ r68 via Wine/REF in der Suite verifiziert                              │
// 26-07-19│ 2.11 │ Arbeitsdatei bewahrt jetzt auch [NUTZER-CODE] roh als Vorbereitung fuer │ CF
//         │      │ semantische Aktionen; fehlerhafte Steuerzeichenpruefung korrigiert      │
//─────────┴──────┴─────────────────────────────────────────────────────────────────────────┴──────

//------------------------------------------------------------------------------------------------
// Unterstuetzter EBNF-Dialekt vs. ISO/IEC 14977:1996
//------------------------------------------------------------------------------------------------
// Dieses Tool folgt bewusst dem "Wirth-Dialekt" (wie in den Pascal-/Modula-2-/Oberon-
// Sprachberichten verwendet), NICHT der ISO/IEC-14977-Norm selbst. Wichtigste Abweichungen:
//
//  - Regelende:        "."                statt ISO's ";"
//  - Kommentare:        "#", "//", "/* */" statt ISO's einzigem "(* ... *)"
//  - NTS-Klammerung:    "<name>" optional  -- stammt eigentlich aus klassischem BNF,
//                       nicht aus ISO 14977 (das kennt nur "nackte" Meta-Identifier)
//  - Bereichsoperator:  "~" fuer Zeichenbereiche, z.B. "a"~"z"                 -- EIGENE
//                       Erweiterung, in ISO 14977 NICHT enthalten. Bewusst NICHT "-"
//                       gewaehlt, weil "-" in ISO 14977 bereits anders belegt ist
//                       (dort: Except-/Mengendifferenz-Operator, z.B. letter - "e").
//
// Alle anderen Kernoperatoren (=, ,, |, [ ], { }, ( ), gequotete Terminale) sind zur
// ISO-Bedeutung kompatibel. Wer explizit ISO-14977-konforme Grammatiken schreiben will,
// sollte diese Erweiterungen (<name>, ~) meiden.
//------------------------------------------------------------------------------------------------
#include <iostream>
#include <stdio.h>
#include <stdlib.h>
#include <ctype.h>
#include <string.h>
#include "msvc_compat.h"
#include "codegen.h"

#ifdef _WIN64
#define OS "Windows 64Bit"
#elif defined _WIN32
#define OS "Windows 32Bit"
#elif defined __APPLE__
#define OS "macOS"
#elif defined __linux__
#define OS "Linux"
#else
#define OS "unknown"
#endif


#define EOS					'\0'
#define EOL					'\n'

#define IDENT_LEN			32
#define FILENAME_LEN		64
#define IDENTLIST_MAX		1024
#define LEXTAB_LEN			1024

#define TOKEN_START			0x80
#define TOKEN_EQUAL			0x81
#define TOKEN_SEQ			0x82
#define TOKEN_OR			0x83	
#define TOKEN_BLOCKON		0x84
#define TOKEN_BLOCKOFF		0x85
#define TOKEN_OPTIONON		0x86
#define TOKEN_OPTIONOFF		0x87
#define TOKEN_REPEATON		0x88
#define TOKEN_REPEATOFF		0x89
#define TOKEN_IDENT			0x8A
#define TOKEN_LITERAL		0x8B
#define TOKEN_QUOT			0x8C
#define TOKEN_END			0x8F
#define TOKEN_EXIT			0x90
#define TOKEN_ERROR			0x91
#define TOKEN_RANGE			0x92

//------------------------------------------------------------------------------------------------
// globals
//------------------------------------------------------------------------------------------------	
char aktChar = EOL;
char lastChar = EOS;
char nextChar = EOS;
int aktToken = TOKEN_START;
int lastToken = TOKEN_START;
int restartToken[16];
char aktName[IDENT_LEN + 1];
char lastName[IDENT_LEN + 1];
char aktRule[IDENT_LEN + 1];
char aktString[IDENT_LEN+1];
char lastString[IDENT_LEN+1];

FILE* fpIn, * fpOut, * fpLst;
int aktTabIndex = 0;
unsigned int errorCnt = 0;
int tableReady = 0;		// 1 sobald eine vollstaendige Tabelle vorliegt (Parse ohne Abbruch
						// bzw. Arbeitsdatei geladen) -- erst dann darf writeWorkfile() laufen

//void test(int checkTS, char* msg);
void put();
char getAktChar();
char* getAktLine();
void ebnfSyntax();
void semantischeAnylyse();
void lexikalischeAnalyse();
void exitProgram(int exitCode);
int execFrom(int startRow, int* pos);
void loadPreservedTests(const char* path);
void writeWorkfile(FILE* fp);
int loadWorkfileAsGrammar(const char* path);
void rebuildFirstEdgesFromTable();
int runTests();
void resolveCallAddresses();
void checkLeftRecursion();
void printLexTab();
extern int leftRecursionFound;
extern const char* inputBuf;
extern int inputLen;
extern char quelltextBuf[];
extern char lexerCfgBuf[];
extern char cgenCfgBuf[];
extern char userCodeBuf[];
extern int tableReady;

//------------------------------------------------------------------------------------------------
// Main program
//------------------------------------------------------------------------------------------------	
int main(int argc, char* argv[]) {

	char inputFileName[FILENAME_LEN + 6];
	char outputFileName[FILENAME_LEN + 8];
	char listFileName[FILENAME_LEN + 8];
	char cgenCName[FILENAME_LEN + 8];
	char cgen68kName[FILENAME_LEN + 8];
	char cgenOS9Name[FILENAME_LEN + 8];

	int fileRet;
	int fallB = 0;

	if (argc < 2) {
		printf("usage: %s <inputfile> [<teststring>]\n", argv[0]);
		printf("Translate EBNF grammar to syntax table\n");
		exitProgram(-1);
	}

	size_t len = strlen(argv[1]);
	if (len > FILENAME_LEN) len = FILENAME_LEN;
	strncpy_s(inputFileName, sizeof(inputFileName), argv[1], len);
	strcat_s(inputFileName, sizeof(inputFileName), ".ebnf");
	strncpy_s(outputFileName, sizeof(outputFileName), argv[1], len);
	strcat_s(outputFileName, sizeof(outputFileName), ".lextab");
	strncpy_s(listFileName, sizeof(listFileName), argv[1], len);
	strcat_s(listFileName, sizeof(listFileName), ".lexlst");
	strncpy_s(cgenCName, sizeof(cgenCName), argv[1], len);
	strcat_s(cgenCName, sizeof(cgenCName), "_p.c");
	strncpy_s(cgen68kName, sizeof(cgen68kName), argv[1], len);
	strcat_s(cgen68kName, sizeof(cgen68kName), ".s68");

	printf("Parsec EBNF Translator on %s\n", OS);
	astReset();

	// WICHTIG (Reihenfolge!): den TESTS-Block der alten Arbeitsdatei retten, BEVOR sie
	// spaeter per "w" geoeffnet und damit geleert wird.
	loadPreservedTests(outputFileName);

	fileRet = fopen_s(&fpIn, inputFileName, "r");
	if (fileRet != 0) {
		// Fall B: keine .ebnf-Quelle -- die Arbeitsdatei selbst ist die Grammatik-Quelle.
		fallB = 1;
		printf("Hinweis: '%s' nicht gefunden -- lade Grammatik aus Arbeitsdatei '%s'\n",
			inputFileName, outputFileName);
		if (!loadWorkfileAsGrammar(outputFileName)) {
			printf("usage: %s <inputfile> [<teststring>]\n", argv[0]);
			printf("    error: weder '%s' noch eine Arbeitsdatei '%s' lesbar\n",
				inputFileName, outputFileName);
			exitProgram(-2);
		}
	}

	fileRet = fopen_s(&fpLst, listFileName, "w");
	if (fileRet != 0) {
		printf("usage: %s <inputfile> [<teststring>]\n", argv[0]);
		printf("    error: can't open list file: %s", listFileName);
		exitProgram(-2);
	}

	if (fallB) {
		// Fall A erledigt all das innerhalb von ebnfSyntax()/semantischeAnylyse()
		resolveCallAddresses();
		rebuildFirstEdgesFromTable();
		checkLeftRecursion();
		printf("%s", quelltextBuf);
		fprintf(fpLst, "%s", quelltextBuf);
		printLexTab();
		tableReady = 1;
	}
	else {
		ebnfSyntax();
	}

	// Arbeitsdatei erst JETZT (nach loadPreservedTests) neu schreiben -- und nur, wenn
	// tatsaechlich eine vollstaendige Tabelle entstanden ist. Bei Parse-Fehlern bleibt
	// die alte Arbeitsdatei (inkl. TESTS-Block) unangetastet statt wie frueher geleert.
	if (tableReady) {
		fileRet = fopen_s(&fpOut, outputFileName, "w");
		if (fileRet != 0) {
			printf("usage: %s <inputfile> [<teststring>]\n", argv[0]);
			printf("    error: can't open output file: %s", outputFileName);
			exitProgram(-2);
		}
		writeWorkfile(fpOut);
	}
	else {
		printf("Hinweis: Grammatik fehlerhaft -- Arbeitsdatei '%s' bleibt unveraendert.\n",
			outputFileName);
	}

	// Codegenerierung (siehe docs/ARCHITEKTUR.md): nur im Fall A (echte .ebnf geparst,
	// nur dann existiert der AST) und nur bei fehlerfreier, nicht-linksrekursiver
	// Grammatik. Erzeugt den C-Zwilling (<basis>_p.c, Host-testbar) und den
	// 68k-Parser (<basis>.s68).
	if (!fallB && tableReady && errorCnt == 0 && !leftRecursionFound) {
		actionsParseConfig(userCodeBuf);
		if (!lexParseConfig(lexerCfgBuf) || !cgenParseConfig(cgenCfgBuf)) {
			printf("CODEGEN: Konfiguration fehlerhaft -- Codegenerierung uebersprungen.\n");
		}
		else if (genParserC(cgenCName) && genParser68k(cgen68kName)) {
			printf("CODEGEN: '%s' und '%s' erzeugt.\n", cgenCName, cgen68kName);
			if (cgenWantOS9()) {
				// Basisname ohne Verzeichnis-Anteil als Default-psect-Name
				const char* base = argv[1];
				const char* slash = strrchr(base, '/');
				if (slash == NULL) slash = strrchr(base, '\\');
				if (slash != NULL) base = slash + 1;
				strncpy_s(cgenOS9Name, sizeof(cgenOS9Name), argv[1], len);
				strcat_s(cgenOS9Name, sizeof(cgenOS9Name), "_os9.a");
				if (genParser68kOS9(cgenOS9Name, base)) {
					printf("CODEGEN: '%s' (OS-9/r68-Format) erzeugt.\n", cgenOS9Name);
				}
			}
		}
	}

	runTests();

	// Optionaler Testlauf: ebnf <basisname> <teststring>
	// Fuehrt die erzeugte Tabelle als Stack-Maschine gegen <teststring> aus,
	// beginnend an Zeile 0 (= Startregel = die erste in der .ebnf definierte Regel).
	if (argc >= 3) {
		if (leftRecursionFound) {
			printf("\nHinweis: Grammatik ist linksrekursiv -- Testlauf uebersprungen (wuerde nie enden).\n");
		}
		else if (errorCnt > 0) {
			printf("\nHinweis: Grammatik enthaelt Fehler -- Testlauf uebersprungen.\n");
		}
		else {
			inputBuf = argv[2];
			inputLen = (int)strlen(inputBuf);
			int pos = 0;
			int ok = execFrom(0, &pos);

			printf("\n=== Testlauf gegen Eingabe \"%s\" ===\n", inputBuf);
			if (ok && pos == inputLen) {
				printf("ERGEBNIS: vollstaendig erkannt (%d Zeichen)\n", pos);
			}
			else if (ok) {
				printf("ERGEBNIS: teilweise erkannt, %d von %d Zeichen (Rest: \"%s\")\n", pos, inputLen, inputBuf + pos);
			}
			else {
				printf("ERGEBNIS: NICHT erkannt\n");
			}
		}
	}

	exitProgram(0);
}

//------------------------------------------------------------------------------------------------
// end program
void exitProgram(int exitCode){
	fflush(stdout);
	if (fpIn != NULL) {
		fclose(fpIn);
	}
	if (fpOut != NULL) {
		fclose(fpOut);
	}
	if (fpLst != NULL) {
		fclose(fpLst);
	}
	exit(exitCode);
}



//------------------------------------------------------------------------------------------------
// Quelltext-Sammelpuffer fuer die Arbeitsdatei (Block "EBNF-QUELLTEXT")
//------------------------------------------------------------------------------------------------
// Sammelt exakt denselben huebsch formatierten Text, der schon immer pro Regel auf die
// Konsole und in die .lexlst-Datei geschrieben wurde (siehe rule()) -- damit die
// Arbeitsdatei den Quelltext "wie im Listing" zeigt, ohne ihn ein zweites Mal aus der
// Tabelle rekonstruieren zu muessen.
#define QUELLTEXT_BUF_SIZE 65536
char quelltextBuf[QUELLTEXT_BUF_SIZE];
int quelltextLen = 0;

void appendQuelltext(const char* text) {
	size_t len = strlen(text);
	if (quelltextLen + (int)len < QUELLTEXT_BUF_SIZE - 1) {
		memcpy(quelltextBuf + quelltextLen, text, len);
		quelltextLen += (int)len;
		quelltextBuf[quelltextLen] = EOS;
	}
}

//------------------------------------------------------------------------------------------------
// List Buffer
//------------------------------------------------------------------------------------------------
char lst[8192];

void clearLst() {
	lst[0] = EOS;
}

void addLst(const char* str, int num) {
	int i;

	strcat_s(lst, sizeof(lst), " ");
	strcat_s(lst, sizeof(lst), str);
	if (num > 0) {
		num = num - (int)strlen(str);
		for(i=0; i<num; i++){
			strcat_s(lst, sizeof(lst), " ");
		}
	}
	//printf("#%s# ",str);
}


//------------------------------------------------------------------------------------------
// Semantic Tabelle
//------------------------------------------------------------------------------------------------	
#define STAT_TRUE			-1
#define STAT_FALSE			-2
#define STAT_ERROR			-3
#define STAT_NEXT			-4  
#define STAT_NONE			-5

char statString[] =  " TFEN-";		// Short sign for TURE, FALSE, ERROR, NEXT
const char* head0 =  "+-----+---------------------------------+-----+---------------------------------+------+----+----+\n";
const char* head1 =  "| Nr  | Rule                            | Mode| NTS/TS                          | Addr | T  | F  |\n";
const char* value0 = "| %-4d| %-32s| %-4s| %-32s| %-5s| %-3s| %-3s|\n";

typedef struct {
	char ident[IDENT_LEN + 1];
	char* mode;
	char TS[IDENT_LEN + 1];
	int trueAction;
	int falseAction;
	int callAddr;		// aufgeloeste Zieladresse fuer NTS-Referenzen (-1 = unaufgeloest/undefiniert)
	char rangeLo;		// nur bei mode=="RNG": untere Grenze des Zeichenbereichs
	char rangeHi;		// nur bei mode=="RNG": obere Grenze des Zeichenbereichs
	char ambigF;		// nur Parse-Zeit: STAT_FALSE dieser Zeile ist "nach ueberspringbarer
						// Gruppe" -- wird daraus ein Sprung auf eine echte Zeile, ist das
						// runtime-mehrdeutig (Position evtl. nicht zurueckgesetzt) -> Warnung
} TabEntry;

TabEntry lexTab[1024];

void printLexTab() {
	char trueStr[8];
	char falseStr[8];
	char addrStr[8];
	char identDisp[IDENT_LEN + 3];
	char tsDisp[IDENT_LEN + 3];
	int i, stat;

	printf(head0);
	printf(head1);
	fprintf(fpLst, head0);
	fprintf(fpLst, head1);
	for (i = 0; i < aktTabIndex; i++) {
		if (strlen(lexTab[i].ident)) {
			printf(head0);
			fprintf(fpLst, head0);
		}
		stat = lexTab[i].trueAction;
		if (stat < 0) {
			trueStr[0] = statString[-stat];
			trueStr[1] = EOS;
		}
		else {
			_itoa_s(stat, trueStr, sizeof(trueStr), 10);
		}
		stat = lexTab[i].falseAction;
		if (stat < 0) {
			falseStr[0] = statString[-stat];
			falseStr[1] = EOS;
		}
		else {
			_itoa_s(stat, falseStr, sizeof(falseStr), 10);
		}
		if (strcmp(lexTab[i].mode, "NTS") == 0) {
			if (lexTab[i].callAddr >= 0) {
				_itoa_s(lexTab[i].callAddr, addrStr, sizeof(addrStr), 10);
			}
			else {
				strcpy_s(addrStr, sizeof(addrStr), "???");
			}
		}
		else {
			strcpy_s(addrStr, sizeof(addrStr), "-");
		}
		// Anzeige-Varianten mit <NTS>-Klammerung nur fuer Bildschirm/Listing (.lexlst);
		// .lextab (fpOut) bleibt roh, da es fuer eine spaetere maschinelle Weiterverarbeitung gedacht ist.
		if (strlen(lexTab[i].ident)) {
			sprintf_s(identDisp, sizeof(identDisp), "<%s>", lexTab[i].ident);
		}
		else {
			identDisp[0] = EOS;
		}
		if (strcmp(lexTab[i].mode, "NTS") == 0) {
			sprintf_s(tsDisp, sizeof(tsDisp), "<%s>", lexTab[i].TS);
		}
		else {
			strncpy_s(tsDisp, sizeof(tsDisp), lexTab[i].TS, IDENT_LEN);
		}
		printf(value0, i, identDisp, lexTab[i].mode, tsDisp, addrStr, trueStr, falseStr);
		fprintf(fpLst, value0, i, identDisp, lexTab[i].mode, tsDisp, addrStr, trueStr, falseStr);
		// fpOut (die .lextab) wird NICHT mehr hier beschrieben -- das alte rohe CSV-Format
		// ist durch die strukturierte Arbeitsdatei ersetzt, siehe writeWorkfile().
	}
	printf(head0);
	fprintf(fpLst, head0);
}

//------------------------------------------------------------------------------------------------
// Regel-Adressaufloesung (Regelname -> Startzeile)
//------------------------------------------------------------------------------------------------
#define MAX_RULES 512
typedef struct {
	char name[IDENT_LEN + 1];
	int addr;
} RuleSym;

RuleSym ruleSymbols[MAX_RULES];
int ruleSymbolCnt = 0;

void resolveCallAddresses() {
	int i, j, found;

	ruleSymbolCnt = 0;
	for (i = 0; i < aktTabIndex; i++) {
		if (strlen(lexTab[i].ident) && ruleSymbolCnt < MAX_RULES) {
			strncpy_s(ruleSymbols[ruleSymbolCnt].name, sizeof(ruleSymbols[ruleSymbolCnt].name), lexTab[i].ident, IDENT_LEN);
			ruleSymbols[ruleSymbolCnt].addr = i;
			ruleSymbolCnt++;
		}
	}

	for (i = 0; i < aktTabIndex; i++) {
		if (strcmp(lexTab[i].mode, "NTS") == 0) {
			found = -1;
			for (j = 0; j < ruleSymbolCnt; j++) {
				if (strcmp(ruleSymbols[j].name, lexTab[i].TS) == 0) {
					found = ruleSymbols[j].addr;
					break;
				}
			}
			lexTab[i].callAddr = found;
			if (found < 0) {
				printf("FEHLER: Zeile %d referenziert undefinierte Regel '%s'\n", i, lexTab[i].TS);
				errorCnt++;
			}
		}
		else {
			lexTab[i].callAddr = -1;
		}
	}
}

//------------------------------------------------------------------------------------------------
// Linksrekursions-Erkennung
//------------------------------------------------------------------------------------------------
// Ein Aufruf einer Regel B aus Regel A gilt als "erste Position", wenn er ohne vorheriges
// Konsumieren eines Terminals erreichbar ist (direkt nach '=' oder '|', oder nach einer
// ueberspringbaren [option]/{repeat}-Gruppe). Zyklen in diesem Graph sind Linksrekursion,
// die ein rekursiver Abstieg (und damit auch eine Stack-Maschine mit Call/Return) nie
// terminieren wuerde -- das ist keine Bug-Frage, sondern Informatik (regulaer vs. kontextfrei).
char currentDefRule[IDENT_LEN + 1] = "";
int firstPos = 1;

// Zeigt an, ob der zuletzt verarbeitete Faktor sich seine trueAction/falseAction bereits
// SELBST korrekt gesetzt hat (block()/repeat()/option()) -- im Gegensatz zu ident()/literal(),
// die dafuer auf term()s generisches Backpatching der ERSTEN Zeile angewiesen sind. term()
// darf dieses Backpatching NUR anwenden, wenn der erste Faktor "einfach" war, sonst zerstoert
// es genau das, was block()/repeat()/option() gerade erst richtig hingebogen haben (der Bug,
// der z.B. "num = [\"-\"] digit {digit}." ohne das optionale Minus scheitern liess).
int lastFactorWasComplex = 0;

// Zeigt an, ob der zuletzt verarbeitete Faktor UEBERSPRINGBAR ist ([option]/{repeat}: darf
// scheitern, ohne dass die Sequenz scheitert und ohne Eingabe zu konsumieren) -- im Gegensatz
// zu Pflicht-Faktoren (ident/literal/block), nach deren Erfolg die Sequenz "committed" ist:
// ein spaeterer Fehlschlag darf dann NICHT mehr eine andere Alternative anspringen, weil
// bereits Eingabe konsumiert wurde und die Stack-Maschine Positionen nur an NTS-Aufruf-
// Grenzen zuruecksetzt.
int lastFactorSkippable = 0;

// Pro Regel nur einmal warnen, wenn eine runtime-mehrdeutige F-Verdrahtung entsteht
// (Faktor nach ueberspringbarer Gruppe, dessen Fehlschlag auf eine echte Zeile springt).
int ambigFalseWarned = 0;

#define MAX_RULE_NAMES 256
char ruleNameList[MAX_RULE_NAMES][IDENT_LEN + 1];
int ruleNameListCnt = 0;

void addRuleNameIfNew(const char* name) {
	int i;
	for (i = 0; i < ruleNameListCnt; i++) {
		if (strcmp(ruleNameList[i], name) == 0) return;
	}
	if (ruleNameListCnt < MAX_RULE_NAMES) {
		strncpy_s(ruleNameList[ruleNameListCnt], sizeof(ruleNameList[ruleNameListCnt]), name, IDENT_LEN);
		ruleNameListCnt++;
	}
}

#define MAX_EDGES 1024
typedef struct {
	char from[IDENT_LEN + 1];
	char to[IDENT_LEN + 1];
} Edge;

Edge firstEdges[MAX_EDGES];
int firstEdgeCnt = 0;

void addFirstEdge(const char* from, const char* to) {
	if (firstEdgeCnt < MAX_EDGES) {
		strncpy_s(firstEdges[firstEdgeCnt].from, sizeof(firstEdges[firstEdgeCnt].from), from, IDENT_LEN);
		strncpy_s(firstEdges[firstEdgeCnt].to, sizeof(firstEdges[firstEdgeCnt].to), to, IDENT_LEN);
		firstEdgeCnt++;
	}
}

int findRuleNameIndex(const char* name) {
	int i;
	for (i = 0; i < ruleNameListCnt; i++) {
		if (strcmp(ruleNameList[i], name) == 0) return i;
	}
	return -1;
}

int dfsColor[MAX_RULE_NAMES];		// 0=weiss, 1=grau (auf dem Stack), 2=schwarz (fertig)
char dfsPath[MAX_RULE_NAMES][IDENT_LEN + 1];
int dfsPathLen = 0;

int leftRecursionFound = 0;

void printCyclePath(int targetIdx) {
	int i, startPos = 0;
	for (i = 0; i < dfsPathLen; i++) {
		if (strcmp(dfsPath[i], ruleNameList[targetIdx]) == 0) {
			startPos = i;
			break;
		}
	}
	printf("FEHLER: LINKSREKURSION erkannt: ");
	for (i = startPos; i < dfsPathLen; i++) {
		printf("%s -> ", dfsPath[i]);
	}
	printf("%s\n", ruleNameList[targetIdx]);
	leftRecursionFound = 1;
}

void dfsVisit(int idx) {
	int i, targetIdx;

	dfsColor[idx] = 1;
	strncpy_s(dfsPath[dfsPathLen], sizeof(dfsPath[dfsPathLen]), ruleNameList[idx], IDENT_LEN);
	dfsPathLen++;

	for (i = 0; i < firstEdgeCnt; i++) {
		if (strcmp(firstEdges[i].from, ruleNameList[idx]) == 0) {
			targetIdx = findRuleNameIndex(firstEdges[i].to);
			if (targetIdx < 0) {
				continue;	// undefinierte Regel, wird schon in resolveCallAddresses gemeldet
			}
			if (dfsColor[targetIdx] == 1) {
				printCyclePath(targetIdx);
				errorCnt++;
			}
			else if (dfsColor[targetIdx] == 0) {
				dfsVisit(targetIdx);
			}
		}
	}

	dfsPathLen--;
	dfsColor[idx] = 2;
}

void checkLeftRecursion() {
	int i;
	for (i = 0; i < ruleNameListCnt; i++) {
		dfsColor[i] = 0;
	}
	for (i = 0; i < ruleNameListCnt; i++) {
		if (dfsColor[i] == 0) {
			dfsPathLen = 0;
			dfsVisit(i);
		}
	}
}

//------------------------------------------------------------------------------------------------
// Stack-Maschine: fuehrt die fertige Tabelle gegen echten Eingabetext aus
//------------------------------------------------------------------------------------------------
// Kernidee (Call/Return statt reinem Goto):
//  - TS/RNG-Zeilen vergleichen direkt gegen das naechste Eingabezeichen (bzw. den naechsten
//    Eingabeabschnitt bei TS) und ruecken bei Erfolg die Position weiter.
//  - NTS-Zeilen sind ein "Unterprogrammaufruf": wir merken uns die Eingabeposition VOR dem
//    Aufruf, rufen die Zielregel (Addr-Spalte) rekursiv auf. Der native C++-Aufrufstack
//    uebernimmt hier exakt die Rolle des Call/Return-Stacks, an dem wir vorher gescheitert
//    waren -- ein Stack-Eintrag ist implizit (Rueckkehr-Zeile ueber trueAction/falseAction
//    der aufrufenden Zeile, Ruecksetzposition ueber die lokale Variable curPos).
//  - falseAction unterscheidet zwei Arten von Fehlschlag: STAT_FALSE (bzw. ein Sprung auf
//    eine andere Zeile = naechste Alternative) heisst "gescheitert, OHNE Eingabe konsumiert
//    zu haben" -- nur solche Fehlschlaege duerfen eine andere Alternative anspringen, denn
//    die Maschine setzt Positionen nur an NTS-Aufruf-Grenzen zurueck. STAT_ERROR heisst
//    "committed": ein Pflicht-Faktor hatte bereits konsumiert, der Fehlschlag ist endgueltig.
//    term() verdrahtet das beim Erzeugen (Faktoren nach ueberspringbaren Gruppen bleiben
//    STAT_FALSE, Faktoren nach sicher konsumierenden Faktoren werden STAT_ERROR).
//    Bekannte Grenze: hat eine ueberspringbare Gruppe zur Laufzeit DOCH konsumiert und
//    ein nachfolgender Faktor scheitert, springt die Maschine ohne Positions-Ruecksetzung
//    weiter -- solche Stellen werden beim Erzeugen der Tabelle klar angewarnt (ambigF).
//  - Linksrekursive Grammatiken wuerden hier (wie bei jedem rekursiven Abstieg) in einer
//    Endlosrekursion enden -- deshalb wird vor dem Start immer checkLeftRecursion() geprueft
//    und ein Testlauf bei gefundener Linksrekursion von main() gar nicht erst gestartet.
const char* inputBuf = NULL;
int inputLen = 0;
